syntax="proto3";
package user;
import "post.proto";

service UserService{
  rpc Create(Useri) returns (Useri);
  rpc GetByID(GetIdFromUser) returns (Useri);
  rpc DeleteByID(GetIdFromUserID) returns (GetIdFromUserID);
  rpc GetAllByUserId(GetIdFromUser) returns (Post);
  rpc GetAllUserFromDb(Empty) returns (AllUser);
  rpc GetList(LimitRequest) returns (LimitResponse);
  rpc CheckLoginMail(Check) returns (okay);
}

message AllUser{
  repeated Useri Users = 1;
}
message Useri{
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string login = 4;
  repeated string email = 5;
  string bio = 6;
  repeated string phone_number = 7;
  int64 type_id = 8;
  bool status = 9;
  Address address = 10;
  repeated Post posts = 11;
}
message Address{
  string id = 1;
  string user_id = 2;
  string country = 3;
  string city = 4;
  string district = 5;
  int64 postal_code = 6;
}
message Check{
  string key = 1;
  string value = 2;
}
message GetIdFromUserID{
  string id = 1;
}
message Empty{
}

message LimitRequest{
  int64 page = 2;
  int64 limit = 3;
}
message LimitResponse{
  repeated Useri Users = 1;
  int64 AllUsers = 2;
}
message okay {
  bool status = 1;
}